--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 const serviceTitle = "彩季のBlogです。";
 const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitle}`;
 
-const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
+const path = Astro.url.pathname.replace(/^\//, "").replace(/\/$/, "");
 ---
 
 <!DOCTYPE html>
@@ -117,8 +117,19 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 		<script>
 			if (import.meta.env.DEV !== undefined && !import.meta.env.DEV) {
 				if (window.location.hostname !== "blog.aki.wtf") {
+					// prettier-ignore
 					window.location.href = `https://blog.aki.wtf${window.location.pathname}${window.location.search}${window.location.hash}`;
 				}
+			}
+
+			if (window.location.pathname !== "/" && /.*\/$/.test(window.location.pathname)) {
+				// prettier-ignore
+				window.location.href = `${window.location.pathname.replace(/^\//, "")}${window.location.search}${window.location.hash}`;
+			}
+
+			if (/.*\/index\.html$/.test(window.location.pathname)) {
+				// prettier-ignore
+				window.location.href = `${window.location.pathname.replace(/index\.html$/, "")}${window.location.search}${window.location.hash}`;
 			}
 		</script>
 	</body>
