--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -122,14 +122,16 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\/$/, "");
 				}
 			}
 
-			if (window.location.pathname !== "/" && /.*\/$/.test(window.location.pathname)) {
-				// prettier-ignore
-				window.location.href = `${window.location.pathname.replace(/\/$/, "")}${window.location.search}${window.location.hash}`;
-			}
+			if (window.location.pathname !== "/") {
+				if (/.*\/index\.html$/.test(window.location.pathname)) {
+					// prettier-ignore
+					window.history.pushState('', document.title, `${window.location.pathname.replace(/\/index\.html$/, "")}${window.location.search}${window.location.hash}`);
+				}
 
-			if (/.*\/index\.html$/.test(window.location.pathname)) {
-				// prettier-ignore
-				window.location.href = `${window.location.pathname.replace(/index\.html$/, "")}${window.location.search}${window.location.hash}`;
+				if (/.*\/$/.test(window.location.pathname)) {
+					// prettier-ignore
+					window.history.pushState('', document.title, `${window.location.pathname.replace(/\/$/, "")}${window.location.search}${window.location.hash}`);
+				}
 			}
 		</script>
 	</body>
