--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -124,8 +124,13 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\/$/, "");
 
 			if (window.location.pathname !== "/") {
 				if (/.*\/index\.html$/.test(window.location.pathname)) {
-					// prettier-ignore
-					window.history.pushState('', document.title, `${window.location.pathname.replace(/\/index\.html$/, "")}${window.location.search}${window.location.hash}`);
+					if (window.location.pathname === "/index.html") {
+						// prettier-ignore
+						window.history.pushState('', document.title, "/");
+					} else {
+						// prettier-ignore
+						window.history.pushState('', document.title, `${window.location.pathname.replace(/\/index\.html$/, "")}${window.location.search}${window.location.hash}`);
+					}
 				}
 
 				if (/.*\/$/.test(window.location.pathname)) {
