--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -126,16 +126,16 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\/$/, "");
 				if (/.*\/index\.html$/.test(window.location.pathname)) {
 					if (window.location.pathname === "/index.html") {
 						// prettier-ignore
-						window.history.pushState('', document.title, "/");
+						window.history.replaceState(null, null, "/");
 					} else {
 						// prettier-ignore
-						window.history.pushState('', document.title, `${window.location.pathname.replace(/\/index\.html$/, "")}${window.location.search}${window.location.hash}`);
+						window.history.replaceState(null, null `${window.location.pathname.replace(/\/index\.html$/, "")}${window.location.search}${window.location.hash}`);
 					}
 				}
 
 				if (/.*\/$/.test(window.location.pathname)) {
 					// prettier-ignore
-					window.history.pushState('', document.title, `${window.location.pathname.replace(/\/$/, "")}${window.location.search}${window.location.hash}`);
+					window.history.replaceState(null, null, `${window.location.pathname.replace(/\/$/, "")}${window.location.search}${window.location.hash}`);
 				}
 			}
 		</script>
