アニメーションしないように修正

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 ---
 
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" transition:animate="none">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
