--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja" transition:animate="none">
 	<head>
 		<meta charset="UTF-8" />
@@ -33,18 +33,31 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 		</script>
 		<!-- End Google Tag Manager -->
 		<link rel="icon" href="/favicon.ico" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap"
-			rel="stylesheet"
-		/>
 		<title>{pageTitle}</title>
 		<script
 			async
 			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6914867149724943"
 			crossorigin="anonymous"
 			is:inline></script>
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			rel="preload"
+			as="style"
+			href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap"
+			media="print"
+			onload="this.media='all'"
+		/>
+		<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
+			media="print"
+			onload="this.media='all'"
+		/>
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<ViewTransitions />
 	</head>
