aria-label, alt追加

--- a/src/components/organisms/Post.astro
+++ b/src/components/organisms/Post.astro
@@ -47,6 +47,7 @@ if (post.content !== undefined) {
 							}?fm=webp&w=${size + 10}`}
 							width={size}
 							height={size}
+							alt={`${tag.name}のアイコン`}
 						/>
 						<span class="post-tag-name">{tag.name}</span>
 					</div>
