--- a/src/components/molecules/CommentArea.astro
+++ b/src/components/molecules/CommentArea.astro
@@ -22,6 +22,8 @@
 				(function() { // DON'T EDIT BELOW THIS LINE
 				var d = document, s = d.createElement('script');
 				s.src = 'https://aki-blog.disqus.com/embed.js';
+
+				// @ts-ignore
 				s.setAttribute('data-timestamp', +new Date());
 				(d.head || d.body).appendChild(s);
 				})();
