Googleフォントの遅延読み込み

--- a/src/components/atoms/GoogleFont.astro
+++ b/src/components/atoms/GoogleFont.astro
@@ -2,5 +2,8 @@
 const { link } = Astro.props;
 ---
 
-<link rel="preload" as="style" href={`${link}&display=swap`} />
-<link rel="stylesheet" href={`${link}&display=swap`} media="print" onload="this.media='all'" />
+<script define:vars={{ link }}>
+	window.addEventListener("load", () => {
+		document.head.insertAdjacentHTML("beforeEnd", `<link rel="stylesheet" href="${link}&display=swap" />`);
+	});
+</script>
