--- a/src/components/atoms/GoogleFont.astro
+++ b/src/components/atoms/GoogleFont.astro
@@ -2,8 +2,5 @@
 const { link } = Astro.props;
 ---
 
-<script define:vars={{ link }}>
-	window.addEventListener("load", () => {
-		document.head.insertAdjacentHTML("beforeEnd", `<link rel="stylesheet" href="${link}&display=swap" />`);
-	});
-</script>
+<link rel="preload" as="style" href={`${link}&display=swap`} />
+<link rel="stylesheet" href={`${link}&display=swap`} media="print" onload="this.media='all'" />
