--- a/src/components/molecules/CommentArea.astro
+++ b/src/components/molecules/CommentArea.astro
@@ -83,8 +83,6 @@
 			width: 100%;
 			height: 100%;
 			background-color: #cccccc;
-			font-weight: bold;
-			text-align: center;
 			z-index: 1;
 
 			#comment-load-wrap {
@@ -99,6 +97,9 @@
 					top: 50%;
 					left: 50%;
 					transform: translate(-50%, -50%);
+					font-weight: bold;
+					white-space: nowrap;
+					font-size: 16px;
 				}
 			}
 		}
