--- a/src/components/molecules/CommentArea.astro
+++ b/src/components/molecules/CommentArea.astro
@@ -2,7 +2,7 @@
 	<div id="disqus_thread"></div>
 	<div id="comment-load">
 		<div id="comment-load-wrap">
-			<span id="comment-load-text">コメントエリアロード中...</span>
+			<span id="comment-load-text">コメント ロード中...</span>
 		</div>
 	</div>
 </div>
