--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-			})(window,document,'script','dataLayer','GTM-WQHBNHNL');
+			})(window,document,'script','dataLayer','GTM-W7HGV4S5');
 		</script>
 		<!-- End Google Tag Manager -->
 		<link rel="icon" href="/favicon.ico" />
@@ -45,7 +45,7 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 		<!-- Google Tag Manager (noscript) -->
 		<noscript>
 			<iframe
-				src="https://www.googletagmanager.com/ns.html?id=GTM-WQHBNHNL"
+				src="https://www.googletagmanager.com/ns.html?id=GTM-W7HGV4S5"
 				height="0"
 				width="0"
 				style="display:none;visibility:hidden"></iframe>
