--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,4 @@
 ---
-import "aki-reset-css";
-import GoogleFont from "@/components/atoms/GoogleFont.astro";
-
 interface Props {
 	title?: string | undefined;
 }
@@ -34,11 +31,13 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 		<!-- End Google Tag Manager -->
 		<link rel="icon" href="/favicon.ico" />
 		<title>{pageTitle}</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<GoogleFont
-			link="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900"
+		<link
+			href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900"
+			rel="stylesheet"
 		/>
-		<GoogleFont link="https://fonts.googleapis.com/css2?family=Source+Code+Pro" />
+		<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro" rel="stylesheet" />
 		<link rel="sitemap" href="/sitemap-index.xml" />
 	</head>
 	<body>
@@ -61,6 +60,91 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 		<footer>
 			<span id="copy">&copy; 彩季</span>
 		</footer>
+		<style is:global>
+			/*
+			* 初期設定
+			*/
+
+			* {
+				/* インターフェース */
+				box-sizing: border-box;
+				padding: 0;
+
+				/* マージン・パディング */
+				margin: 0;
+
+				/* フォント */
+				font-family: "游ゴシック体", YuGothic, "游ゴシック", "メイリオ", Meiryo, "Hiragino Kaku Gothic Pro",
+					"ヒラギノ角ゴ Pro W3", "ＭＳ Ｐゴシック", sans-serif;
+				font-size: 18px;
+				line-height: 1.6;
+			}
+
+			*:focus {
+				outline: none;
+			}
+
+			:root {
+				background-color: white;
+			}
+
+			/* display */
+			head,
+			meta,
+			title,
+			link,
+			style,
+			script {
+				display: none;
+			}
+
+			html,
+			body,
+			p,
+			div,
+			article,
+			aside,
+			footer,
+			header,
+			hgroup,
+			main,
+			nav,
+			section {
+				display: block;
+			}
+
+			html,
+			body {
+				width: 100%;
+				height: 100%;
+			}
+
+			ul,
+			ol {
+				padding-block-start: 0;
+				padding-block-end: 0;
+				padding-inline-start: 40px;
+				margin-inline-start: 0;
+				margin-inline-end: 0;
+			}
+
+			a {
+				color: #1976d2;
+			}
+
+			p {
+				margin-bottom: 10px;
+			}
+
+			p:last-of-type {
+				margin-bottom: 0;
+			}
+
+			img {
+				max-width: 100%;
+				height: auto;
+			}
+		</style>
 
 		<style lang="scss">
 			:global(*) {
