adsenseコード追加

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,6 +39,10 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 		/>
 		<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro" rel="stylesheet" />
 		<link rel="sitemap" href="/sitemap-index.xml" />
+		<script
+			async
+			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6914867149724943"
+			crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
