--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ posts.contents.forEach((post) => {
 });
 ---
 
-<Layout>
+<Layout ogType="blog">
 	<div class="post-list">
 		{
 			posts.contents.map((post) => (
