--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,12 @@
 ---
 interface Props {
 	title?: string | undefined;
+	ogType?: string;
+	description?: string;
+	ogImage?: string;
 }
 
-const { title } = Astro.props;
+const { title, ogType = "article", description = "彩季のブログです。", ogImage = "/default-ogp.png" } = Astro.props;
 const serviceTitle = "彩季のBlogです。";
 const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitle}`;
 
@@ -15,7 +18,7 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="description" content="彩季のブログです。" />
+		<meta name="description" content={description} />
 		<meta name="format-detection" content="email=no,telephone=no,address=no" />
 		<meta name="author" content="彩季" />
 		<link rel="canonical" href={`https://blog.aki.wtf/${path}`} />
@@ -29,6 +32,14 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 			})(window,document,'script','dataLayer','GTM-W7HGV4S5');
 		</script>
 		<!-- End Google Tag Manager -->
+		<meta property="og:url" content={`https://blog.aki.wtf/${path}`} />
+		<meta property="og:type" content={ogType} />
+		<meta property="og:title" content={pageTitle} />
+		<meta property="og:description" content={description} />
+		<meta property="og:site_name" content="彩季のBlogです。" />
+		<meta property="og:image" content={ogImage} />
+		<meta name="twitter:card" content={ogImage === "/default-ogp.png" ? "summary" : "summary_large_image"} />
+		<meta name="twitter:site" content="@Akime_Aki" />
 		<link rel="icon" href="/favicon.ico" />
 		<title>{pageTitle}</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
