--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -26,7 +26,10 @@ if (html !== null) {
 }
 ---
 
-<h2 class="post-title">{post.title}</h2>
+<div class="post-info">
+	<h2 class="post-title">{post.title}</h2>
+	{post.thumbnail !== undefined && <img class="post-thumbnail" src={`${post.thumbnail.url}?fm=webp&w=800`} />}
+</div>
 
 <div class="post-head">
 	<time datetime={post.publishedAt ?? post.createdAt}>{formatDate(post.publishedAt ?? post.createdAt)}</time>
@@ -59,19 +62,32 @@ if (html !== null) {
 	<p class="comment-note">匿名でコメントできます↓<br />（メアドはいるけど、適当でOK）</p>
 </article>
 
-<style>
-	.post-title {
-		font-size: 30px;
-		margin-bottom: 30px;
-		font-weight: 500;
-		text-align: center;
+<style lang="scss">
+	.post-info {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 30px;
+		margin-bottom: 60px;
+
+		.post-title {
+			font-size: 30px;
+			font-weight: 500;
+			text-align: center;
+			width: 100%;
+			max-width: 1000px;
+		}
+
+		.post-thumbnail {
+			width: 100%;
+			max-width: 800px;
+		}
 	}
 
 	.post-head {
-		margin-bottom: 20px;
 		width: 100%;
 		max-width: 800px;
-		margin: 0 auto;
+		margin: 0 auto 60px auto;
 
 		.post-tags {
 			display: flex;
